...
    
    @IBOutlet var speedLabels: [UILabel]!
    @IBOutlet weak var speedViewHeightConstraint: NSLayoutConstraint!
    @IBOutlet var colorableViews: [UIView]!
    
    @IBAction func didTapMaxSpeed(_ sender: Any) {
        let alertController = UIAlertController(title: "Pick a max speed",
                                                message: "You will be alerted when you exceed this max speed.",
                                                preferredStyle: .alert)
        
        alertController.addTextField { [weak self] (textField) in
            textField.keyboardType = .numberPad
            if let maxSpeed = self?.speedChecker.maximumSpeed {
...
